[package]
name = "blue-pill-quickstart"
version = "0.1.0"
authors = ["Guillaume Pinot <texitoi@texitoi.eu>"]

[dependencies]
#stm32f103xx-hal = { git = "https://github.com/japaric/stm32f103xx-hal", branch = "master" }
# For stable support
stm32f103xx-hal = { git = "https://github.com/TeXitoi/stm32f103xx-hal", branch = "update-for-1.30" }
cortex-m = "0.5"
cortex-m-rt = "0.6"
panic-semihosting = "0.5"
