[package]
name = "blue-pill-quickstart"
version = "0.1.0"
authors = ["Guillaume Pinot <texitoi@texitoi.eu>"]
edition = "2018"

[dependencies]
cortex-m = "0.5"
cortex-m-rt = { version = "0.6.6", features = ["device"] }
panic-semihosting = "0.5"
bare-metal = { version = "0.2.4", features = ["const-fn"] }

[dependencies.hal]
git = "https://github.com/japaric/stm32f103xx-hal"
branch = "master"
package = "stm32f103xx-hal"
features = ["rt"]